# reactive-synthesis-bfss

./: .clang-format  .gitignore  .gitmodules  AIGER-algorithm.txt  Makefile  README.md
docs/: DependentSynthesis.md  DependentSynthesisAlgorithm.md
notebooks/: decomposed_synthesis_experiements.ipynb  find_dependencies_experiements.ipynb  spot-playground.ipynb  synthesis_experiements.ipynb
src/: CMakeLists.txt  automaton_algorithm.cpp  automaton_algorithm.h  automaton_dependencies.cpp  automaton_dependencies.h  bdd_var_cacher.cpp  bdd_var_cacher.h  dependents_synthesiser.cpp  dependents_synthesiser.h  find_dependencies.cpp  find_dependencies.h  find_dependents.cpp  find_deps_by_automaton.cpp  find_deps_by_automaton.h  find_deps_by_formula.cpp  find_deps_by_formula.h  formula_algorithm.cpp  formula_algorithm.h  formula_dependencies.cpp  formula_dependencies.h  playground.cpp  reactive_specification.cpp  reactive_specification.h  synt_independents.cpp  synt_instance.cpp  synt_instance.h  synt_measure.cpp  synt_measure.h  synthesis.cpp  synthesis_utils.cpp  synthesis_utils.h  utils.cpp  utils.h  variable_dependency.cpp  variable_dependency.h
tools/: apply_synt.py  apply_synt_tool.py  dependecies_summary.csv  dependencies_lookup.py  experiment_analysis copy.ipynb  experiment_analysis.ipynb  find_dependencies_experiements.ipynb  generate_benchmarks.py  generate_benchmarks_file.py  lookup_dependencies.py  lookup_dependencies_in_benchmark.py  output_processor.py  search_dependencies_in_benchmark.py  synthesis_experiements.ipynb  tlsf_dependecies
tools/dependcies_in_benchmarks/: __init__.py
